@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/asciidoctor
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/asciidoctor/ChangeLog,v 1.2 2014/07/26 19:38:33 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/asciidoctor/ChangeLog,v 1.3 2014/08/13 05:31:02 graaff Exp $
+
+*asciidoctor-1.5.0 (13 Aug 2014)
+
+  13 Aug 2014; Hans de Graaff <graaff@gentoo.org> +asciidoctor-1.5.0.ebuild:
+  Version bump.
 
   26 Jul 2014; Manuel Rüger <mrueg@gentoo.org> asciidoctor-0.1.4.ebuild:
   Add ruby20 target.
